<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@color/colorBgUniversal">

    <LinearLayout
        android:id="@+id/layout_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/margin_20dp">

        <com.example.sumerpatel.chatapp.customviews.Font300
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:textColor="@color/white_with80pacity"
            android:textSize="@dimen/font_size_20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/margin_20dp">

        <com.example.sumerpatel.chatapp.customviews.Font300
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:textColor="@color/white_with80pacity"
            android:textSize="@dimen/font_size_20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/margin_20dp">

        <com.example.sumerpatel.chatapp.customviews.Font300
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            android:textColor="@color/white_with80pacity"
            android:textSize="@dimen/font_size_20sp"/>

    </LinearLayout>

</LinearLayout>